--- a/team-ios-koth/Base.lproj/Main.storyboard
+++ b/team-ios-koth/Base.lproj/Main.storyboard
@@ -26,8 +26,17 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EQQ-48-QiX">
-                                <rect key="frame" x="0.0" y="20" width="320" height="78"/>
+                                <rect key="frame" x="0.0" y="20" width="115" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j1h-7O-cbp">
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="30"/>
+                                        <state key="normal" title="Spawn Treasure!"/>
+                                        <connections>
+                                            <action selector="spawnTreasure:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FDN-MO-NUv"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AuB-fe-CCr">
                                 <rect key="frame" x="16" y="174" width="288" height="245"/>
